# kca-pico

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  board_defs.h  btn.c  btn.h  encoder.c  encoder.h  lever.c  lever.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
